Design fixes for mobile version of Event Form
Fixed overlapping text and misplaced dividers

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -596,6 +596,27 @@ form.event_form {
   }
 }
 
+@media (max-width:768px) {
+
+  form.event_form {
+    .form-group {
+      min-height: 40px;
+      margin-bottom:0px;
+      .control-label {
+        line-height: 30px;
+      }
+    }
+    input, select {
+      max-width: 400px;
+    }
+    .event_form_name, .event_form_subkast, .event_form_location, .event_form_date, .event_form_date.is_all_day, .event_form_image, .event_form_description {
+      height: auto;
+      padding: 15px 0px;
+    }
+  }
+}
+
+
 /* EVENT PAGE */
 
 .event-page.col-md-8 {
